@@ -1,6 +1,6 @@
 ## =============================================================================
 ## 
-# @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.13 $) $Date: 2007/03/08 00:21:04 $
+# @(#) $RCSfile: lis.conf.in,v $ $Name:  $($Revision: 0.9.2.14 $) $Date: 2007/03/08 11:23:09 $
 ##
 ## -----------------------------------------------------------------------------
 ##
@@ -45,7 +45,7 @@
 ##
 ## -----------------------------------------------------------------------------
 ##
-## Last Modified $Date: 2007/03/08 00:21:04 $ by $Author: brian $
+## Last Modified $Date: 2007/03/08 11:23:09 $ by $Author: brian $
 ##
 ## =============================================================================
 
@@ -54,17 +54,17 @@
 ## -----------------------------------------------------------
 ##	name	    prefix	major	n-minors    n-majors
 driver	inet		ss_	30
-driver	udp2		udp	*
-driver	rawip2		raw	*
-driver	tcp2		tcp	*
+driver	udp		udp	*
+driver	rawip		raw	*
+driver	tcp		tcp	*
 
 ## Object name specifications
 ## -----------------------------------------------------------
 ##	type	name	    object name
 objname	driver	inet		inet
-objname	driver	udp2		udp
-objname	driver	rawip2		rawip
-objname	driver	tcp2		tcp
+objname	driver	udp		udp
+objname	driver	rawip		rawip
+objname	driver	tcp		tcp
 
 ## Loadable specifications
 ## -----------------------------------------------------------
@@ -111,7 +111,7 @@ node	/dev/ticots_ord	     c	0666	inet		42
 node	/dev/ticots	     c	0666	inet		43
 node	/dev/ticlts	     c	0666	inet		44
 @WITH_OPENSS7_SCTP_TRUE@node	/dev/sctp	     c	0666	inet		45
-node	/dev/udp2	     c	0666	clone		udp2
-node	/dev/rawip2	     c	0666	clone		rawip2
-node	/dev/tcp2	     c	0666	clone		tcp2
+node	/dev/udp2	     c	0666	clone		udp
+node	/dev/rawip2	     c	0666	clone		rawip
+node	/dev/tcp2	     c	0666	clone		tcp
 
